fix horrible scroll jump on animated transition

--- a/src/components/styles-content.css
+++ b/src/components/styles-content.css
@@ -1,3 +1,7 @@
+.portfolio-container {
+  position: relative;
+}
+
 .content-container {
   padding-top: 2.6em;
 }
